[package]
name = "cands_interface"
license = "MIT"
authors = ["DigitalServo"]
description = "This is an interface for DigitalServo USB CAN board."
version = "0.1.14"
edition = "2021"

[features]
usb-ftdi = ["ftdi-embedded-hal"]
raspberrypi = ["rppal"]

[dependencies]
async-io = "2.4.0"
futures-lite = "2.6.0"
ftdi-embedded-hal = {version= "0.22.1", features = ["libftd2xx", "libftd2xx-static"], optional = true}
rppal = {version = "0.22.1", optional = true}
