[package]
name = "cands_interface"
license = "MIT"
authors = ["DigitalServo"]
description = "This is an interface for DigitalServo USB CAN board."
version = "0.1.20"
edition = "2024"

[features]
usb-ftdi = ["ftdi-embedded-hal"]
raspberrypi = ["rppal"]
raspberrypi_cm = ["rppal"]

[dependencies]
async-io = "2.4.1"
futures-lite = "2.6.0"
ftdi-embedded-hal = {version= "0.23.2", features = ["libftd2xx", "libftd2xx-static"], optional = true}
rppal = {version = "0.22.1", optional = true}
